styling and responsiveness updates

--- a/contact.html
+++ b/contact.html
@@ -14,8 +14,8 @@
     <title>Contact</title>
   </head>
 
-<body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <body style="background-image: url(assets/images/light-grey-terrazzo.png)">
+    <nav class="navbar navbar-expand-lg navbar-light">
     <a class="navbar-brand" href="index.html">Kamari Clark</a>
     <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -95,13 +95,13 @@
         <div class="col-md-12 mb-6">
             <div class="form-group">
               <label for="comment">Comments or Concerns?</label>
-              <textarea class="form-control" rows="25" id="comment"></textarea>
+              <textarea class="form-control" rows="15" id="comment"></textarea>
             </div>
           </div>
       </div>
 
       <div class="row">
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <button type="submit" class="btn btn-primary" id ="btnSubmit">Submit</button>
       </div>
       </div>
 
@@ -120,5 +120,4 @@
     <!--    Jquery for dropdown functionality-->
 
   </body>
-</html><!DOCTYPE html>
-<html lang="en">
+</html>
