--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 
-    <title>About Me</title>
-  </head>
+  <title>About Me</title>
+</head>
 
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="index.html">Kamari Clark</a> <!--Name in corner of nav bar -->
+<body style="background-image: url(assets/images/light-grey-terrazzo.png)">
+  <nav class="navbar navbar-expand-lg navbar-light">
+    <a class="navbar-brand" href="index.html">Kamari Clark</a>
+    <!--Name in corner of nav bar -->
     <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -31,21 +33,21 @@
         </li>
 
         <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact Me</a>
+          <a class="nav-link" href="contact.html">Contact Me</a>
         </li>
-<li>
+        <li>
 
-<div class="dropdown">
-  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     Navigate Me
   </button>
-  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-    <a class="dropdown-item" href="index.html">Home</a>
-    <a class="dropdown-item" href="portfolio.html">Portfolio</a>
-    <a class="dropdown-item" href="contact.html">Contact</a>
-  </div>
-</div>
-         </li>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <a class="dropdown-item" href="index.html">Home</a>
+              <a class="dropdown-item" href="portfolio.html">Portfolio</a>
+              <a class="dropdown-item" href="contact.html">Contact</a>
+            </div>
+          </div>
+        </li>
 
       </ul>
       <form class="form-inline my-2 my-lg-0">
@@ -58,49 +60,63 @@
 
   <div class="container" style="background-image: url(assets/images/stardust_@2X.png)">
     <div class="row">
-    <div class="col-md-12">
-   <h1 style="color: lightblue">Kamari Clark</h1>
-   </div>
-   </div>
-     <hr />
-     <div class="row">
-         <div class="col-md-3"><img src="assets/images/kamari.jpg" width="250" height = "300" alt="Placeholder" class="img-fluid"></div>
-         <div class="col-md-9"><p>My name is Kamari Clark. I like to program. I love music. Now I will begin to randomly generate text. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pellentesque felis lectus, in vestibulum justo ornare a. Aenean rhoncus, dolor sed dictum sagittis, mi tortor auctor sapien, rutrum lobortis enim turpis ut diam
-         </p>
-
-         <p>My name is Kamari Clark. I like to program. I love music. Now I will begin to randomly generate text. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pellentesque felis lectus, in vestibulum justo ornare a. Aenean rhoncus, dolor sed dictum sagittis, mi tortor auctor sapien, rutrum lobortis enim turpis ut diam
-         </p>
-
-         <p>My name is Kamari Clark. I like to program. I love music. Now I will begin to randomly generate text. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pellentesque felis lectus, in vestibulum justo ornare a. Aenean rhoncus, dolor sed dictum sagittis, mi tortor auctor sapien, rutrum lobortis enim turpis ut diam
-         </p>
-
-         <p>My name is Kamari Clark. I like to program. I love music. Now I will begin to randomly generate text. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pellentesque felis lectus, in vestibulum justo ornare a. Aenean rhoncus, dolor sed dictum sagittis, mi tortor auctor sapien, rutrum lobortis enim turpis ut diam
-         </p>
-
-         <p>My name is Kamari Clark. I like to program. I love music. Now I will begin to randomly generate text. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pellentesque felis lectus, in vestibulum justo ornare a. Aenean rhoncus, dolor sed dictum sagittis, mi tortor auctor sapien, rutrum lobortis enim turpis ut diam
-         </p>
-
-         <p>My name is Kamari Clark. I like to program. I love music. Now I will begin to randomly generate text. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pellentesque felis lectus, in vestibulum justo ornare a. Aenean rhoncus, dolor sed dictum sagittis, mi tortor auctor sapien, rutrum lobortis enim turpis ut diam
-         </p></div>
-     </div>
-     <hr />
-
+      <div class="col-md-12">
+        <h1>Kamari Clark</h1>
       </div>
+    </div>
+    <hr />
+    <div class="row">
+      <div class="col-md-3"><img src="assets/images/kamari.jpg" width="250" height="300" alt="Placeholder" class="img-fluid"></div>
+      <div class="col-md-9">
+        <p>My name is Kamari Clark. I like to program. I love music. Now I will begin to randomly generate text. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pellentesque felis lectus, in vestibulum justo ornare a. Aenean rhoncus, dolor
+          sed dictum sagittis, mi tortor auctor sapien, rutrum lobortis enim turpis ut diam
+        </p>
 
-<footer class="footer">
-      <div class="container">
-        <span class="text-muted">Kamari Clark Copyright</span>
+        <p>My name is Kamari Clark. I like to program. I love music. Now I will begin to randomly generate text. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pellentesque felis lectus, in vestibulum justo ornare a. Aenean rhoncus, dolor
+          sed dictum sagittis, mi tortor auctor sapien, rutrum lobortis enim turpis ut diam
+        </p>
+
+        <p>My name is Kamari Clark. I like to program. I love music. Now I will begin to randomly generate text. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pellentesque felis lectus, in vestibulum justo ornare a. Aenean rhoncus, dolor
+          sed dictum sagittis, mi tortor auctor sapien, rutrum lobortis enim turpis ut diam
+        </p>
+        <p>My name is Kamari Clark. I like to program. I love music. Now I will begin to randomly generate text. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pellentesque felis lectus, in vestibulum justo ornare a. Aenean rhoncus, dolor
+          sed dictum sagittis, mi tortor auctor sapien, rutrum lobortis enim turpis ut diam
+        </p>
+        <p>My name is Kamari Clark. I like to program. I love music. Now I will begin to randomly generate text. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pellentesque felis lectus, in vestibulum justo ornare a. Aenean rhoncus, dolor
+          sed dictum sagittis, mi tortor auctor sapien, rutrum lobortis enim turpis ut diam
+        </p>
+        <p>My name is Kamari Clark. I like to program. I love music. Now I will begin to randomly generate text. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pellentesque felis lectus, in vestibulum justo ornare a. Aenean rhoncus, dolor
+          sed dictum sagittis, mi tortor auctor sapien, rutrum lobortis enim turpis ut diam
+        </p>
+
+        <p>My name is Kamari Clark. I like to program. I love music. Now I will begin to randomly generate text. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pellentesque felis lectus, in vestibulum justo ornare a. Aenean rhoncus, dolor
+          sed dictum sagittis, mi tortor auctor sapien, rutrum lobortis enim turpis ut diam
+        </p>
+
+        <p>My name is Kamari Clark. I like to program. I love music. Now I will begin to randomly generate text. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pellentesque felis lectus, in vestibulum justo ornare a. Aenean rhoncus, dolor
+          sed dictum sagittis, mi tortor auctor sapien, rutrum lobortis enim turpis ut diam
+        </p>
+
+        <p>My name is Kamari Clark. I like to program. I love music. Now I will begin to randomly generate text. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pellentesque felis lectus, in vestibulum justo ornare a. Aenean rhoncus, dolor
+          sed dictum sagittis, mi tortor auctor sapien, rutrum lobortis enim turpis ut diam
+        </p>
       </div>
-    </footer>
+    </div>
+    <hr />
 
-   <!--    Jquery for dropdown functionality-->
+  </div>
 
-   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
+  <footer class="footer">
+    <div class="container">
+      <span class="text-muted">Kamari Clark Copyright</span>
+    </div>
+  </footer>
 
-    <!--    Jquery for dropdown functionality-->
+  <!--    Jquery for dropdown functionality-->
 
-  </body>
-</html><!DOCTYPE html>
-<html lang="en">
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
+</body>
+
+</html>
