--- a/portfolio.html
+++ b/portfolio.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
-    <title>Portfolio</title>
-  </head>
+  <title>Portfolio</title>
+</head>
 
-<body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<body style="background-image: url(assets/images/light-grey-terrazzo.png)">
+  <nav class="navbar navbar-expand-lg navbar-light">
     <a class="navbar-brand" href="index.html">Kamari Clark</a>
     <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -30,21 +31,21 @@
         </li>
 
         <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact Me</a>
+          <a class="nav-link" href="contact.html">Contact Me</a>
         </li>
-<li>
+        <li>
 
-<div class="dropdown">
-  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     Navigate Me
   </button>
-  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-    <a class="dropdown-item" href="index.html">Home</a>
-    <a class="dropdown-item" href="portfolio.html">Portfolio</a>
-    <a class="dropdown-item" href="contact.html">Contact</a>
-  </div>
-</div>
-         </li>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <a class="dropdown-item" href="index.html">Home</a>
+              <a class="dropdown-item" href="portfolio.html">Portfolio</a>
+              <a class="dropdown-item" href="contact.html">Contact</a>
+            </div>
+          </div>
+        </li>
 
       </ul>
       <form class="form-inline my-2 my-lg-0">
@@ -57,57 +58,55 @@
 
   <div class="container" style="background-image: url(assets/images/stardust_@2X.png)">
     <div class="row">
-    <div class="col-md-12">
-   <h1 style="color: lightblue">Portfolio</h1>
-   </div>
-   </div>
+      <div class="col-md-12">
+        <a href="http://www.github.com/kamclark"><h1>Portfolio</h1></a>
+      </div>
+    </div>
 
-     <hr />
-    <div class="row">
-       <div class="col-md-6">
-<!--           <span class="notify-badge">NEW</span>-->
-            <a href="https://github.com/kamclark/Baseball"><img class ="portfolioImages" src="assets/images/baseball.jpg" alt="baseball"><br>
-            <h2>Baseball</h2></a>
-       </div>
+    <hr />
+      <div class="row">
+        <div class="col-md-6">
+          <a href="http://www.github.com/kamclark/Baseball">
+          <img class ="portfolioImages" src="assets/images/baseball.jpg" alt="baseball">
+            <div class="portfolioLinks text-center">Baseball Simulator</div></a>
+        </div>
 
         <div class="col-md-6">
-<!--           <span class="notify-badge">NEW</span>-->
-            <a href="https://github.com/kamclark/Calculator"><img class ="portfolioImages" src="assets/images/math.jpg" alt="calculator"><br>
-            <h2>Calculator</h2></a>
-          </div>
+          <a href="https://github.com/kamclark/GiphyProject">
+          <img class ="portfolioImages" src="https://media.giphy.com/media/YJBNjrvG5Ctmo/giphy.gif" alt="giphy">
+            <div class="portfolioLinks text-center">Giphy Search</div> <a href="http://www.github.com/kamclark/Baseball">
+        </div>
+      </div>
 
-    </div>
-
-    <div class="row">
-       <div class="col-md-6">
-
-            <img class ="portfolioImages" src="assets/images/bulb.png" alt="Social Media Platform">
-            <br>
-            <h2>Social Media Platform</h2>
-       </div>
+      <div class="row">
+        <div class="col-md-6">
+          <a href="https://github.com/kamclark/unit-4-game">
+          <img class ="portfolioImages" src="assets/images/greedo.jpg" alt="javascript game">
+            <div class="portfolioLinks text-center">Javascript Turn-based Game</div></a>
+        </div>
 
         <div class="col-md-6">
-            <img class ="portfolioImages" src="assets/images/QuestionMark.png" alt="Question Mark"><br>
-            <h2>Your Business Next</h2>
-          </div>
+          <a href="https://github.com/kamclark/Psychic-Game">
+          <img class ="portfolioImages" src="assets/images/psychic.png" alt="guessing game">
+            <div class="portfolioLinks text-center">Javascript Guessing Game</div></a>
+        </div>
+      </div>
 
-    </div>
-    </div>
-
-<footer class="footer">
+</div>
+    <footer class="footer">
       <div class="container">
         <span class="text-muted">Kamari Clark Copyright</span>
       </div>
-</footer>
-
-   <!--    Jquery for dropdown functionality-->
-
-   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
+    </footer>
 
     <!--    Jquery for dropdown functionality-->
 
-  </body>
-</html><!DOCTYPE html>
-<html lang="en">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
+
+    <!--    Jquery for dropdown functionality-->
+
+</body>
+
+</html>
