--- a/portfolio.html
+++ b/portfolio.html
@@ -92,6 +92,20 @@
         </div>
       </div>
 
+      <div class="row">
+        <div class="col-md-6">
+          <a href="https://github.com/kamclark/TriviaGame">
+          <img class ="portfolioImages" src="assets/images/chalkboard.jpg" alt="quiz game">
+            <div class="portfolioLinks text-center">Javascript Quiz Game</div></a>
+        </div>
+
+        <div class="col-md-6">
+          <a href="https://github.com/kamclark">
+          <img class ="portfolioImages" src="assets/images/QuestionMark.png" alt="unknown">
+            <div class="portfolioLinks text-center">TBD</div></a>
+        </div>
+      </div>
+
 </div>
     <footer class="footer">
       <div class="container">
