--- a/portfolio.html
+++ b/portfolio.html
@@ -100,6 +100,12 @@
         </div>
 
         <div class="col-md-6">
+          <a href="https://github.com/kamclark/liri-node-app">
+          <img class ="portfolioImages" src="assets/images/liri.png" alt="liri">
+            <div class="portfolioLinks text-center">Liri Command Line Node App</div></a>
+        </div>
+
+        <div class="col-md-6">
           <a href="https://github.com/kamclark">
           <img class ="portfolioImages" src="assets/images/QuestionMark.png" alt="unknown">
             <div class="portfolioLinks text-center">TBD</div></a>
