--- a/portfolio.html
+++ b/portfolio.html
@@ -106,6 +106,12 @@
         </div>
 
         <div class="col-md-6">
+          <a href="https://github.com/kamclark/FriendFinder">
+          <img class ="portfolioImages" src="assets/images/heart.jpg" alt="FriendFinder">
+            <div class="portfolioLinks text-center">Friend Matching App</div></a>
+        </div>
+
+        <div class="col-md-6">
           <a href="https://github.com/kamclark">
           <img class ="portfolioImages" src="assets/images/QuestionMark.png" alt="unknown">
             <div class="portfolioLinks text-center">TBD</div></a>
