--- a/portfolio.html
+++ b/portfolio.html
@@ -112,6 +112,12 @@
         </div>
 
         <div class="col-md-6">
+          <a href="https://github.com/kamclark/EatBurger">
+          <img class ="portfolioImages" src="assets/images/burger.jpg" alt="EatBurger">
+            <div class="portfolioLinks text-center">BurgerApp</div></a>
+        </div>
+
+        <div class="col-md-6">
           <a href="https://github.com/kamclark">
           <img class ="portfolioImages" src="assets/images/QuestionMark.png" alt="unknown">
             <div class="portfolioLinks text-center">TBD</div></a>
