--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -93,35 +93,54 @@
       </div>
 
       <div class="row">
-        <div class="col-md-6">
-          <a href="https://github.com/kamclark/TriviaGame">
-          <img class ="portfolioImages" src="assets/images/chalkboard.jpg" alt="quiz game">
-            <div class="portfolioLinks text-center">Javascript Quiz Game</div></a>
-        </div>
+          <div class="col-md-6">
+              <a href="https://github.com/kamclark/TriviaGame">
+                  <img class="portfolioImages" src="assets/images/chalkboard.jpg" alt="quiz game">
+                  <div class="portfolioLinks text-center">Javascript Quiz Game</div>
+              </a>
+          </div>
 
-        <div class="col-md-6">
-          <a href="https://github.com/kamclark/liri-node-app">
-          <img class ="portfolioImages" src="assets/images/liri.png" alt="liri">
-            <div class="portfolioLinks text-center">Liri Command Line Node App</div></a>
-        </div>
+          <div class="col-md-6">
+              <a href="https://github.com/kamclark/liri-node-app">
+                  <img class="portfolioImages" src="assets/images/liri.png" alt="liri">
+                  <div class="portfolioLinks text-center">Liri Command Line Node App</div>
+              </a>
+          </div>
 
-        <div class="col-md-6">
-          <a href="https://github.com/kamclark/FriendFinder">
-          <img class ="portfolioImages" src="assets/images/heart.jpg" alt="FriendFinder">
-            <div class="portfolioLinks text-center">Friend Matching App</div></a>
-        </div>
+          <div class="col-md-6">
+              <a href="https://github.com/kamclark/FriendFinder">
+                  <img class="portfolioImages" src="assets/images/heart.jpg" alt="FriendFinder">
+                  <div class="portfolioLinks text-center">Friend Matching App</div>
+              </a>
+          </div>
 
-        <div class="col-md-6">
-          <a href="https://github.com/kamclark/EatBurger">
-          <img class ="portfolioImages" src="assets/images/burger.jpg" alt="EatBurger">
-            <div class="portfolioLinks text-center">BurgerApp</div></a>
-        </div>
+          <div class="col-md-6">
+              <a href="https://github.com/kamclark/EatBurger">
+                  <img class="portfolioImages" src="assets/images/burger.jpg" alt="EatBurger">
+                  <div class="portfolioLinks text-center">BurgerApp</div>
+              </a>
+          </div>
 
-        <div class="col-md-6">
-          <a href="https://github.com/kamclark">
-          <img class ="portfolioImages" src="assets/images/QuestionMark.png" alt="unknown">
-            <div class="portfolioLinks text-center">TBD</div></a>
-        </div>
+          <div class="col-md-6">
+              <a href="https://github.com/nicolersj/8Bit-Burgers">
+                  <img class="portfolioImages" src="assets/images/8bitburger.png" alt="GroupProject2">
+                  <div class="portfolioLinks text-center">Group Project Restaurant App</div>
+              </a>
+          </div>
+
+          <div class="col-md-6">
+              <a href="https://github.com/kamclark/marketplaceGWU">
+                  <img class="portfolioImages" src="assets/images/marketplace.jpg" alt="Marketplace">
+                  <div class="portfolioLinks text-center">Marketplace</div>
+              </a>
+          </div>
+
+          <div class="col-md-6">
+              <a href="https://github.com/kamclark">
+                  <img class="portfolioImages" src="assets/images/QuestionMark.png" alt="unknown">
+                  <div class="portfolioLinks text-center">TBD</div>
+              </a>
+          </div>
       </div>
 
 </div>
